examples/test/testpolicy3139.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3139
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key34: value9
      key19: value31
      key10: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value10
      podSelector:
        matchLabels:
          key28: value5
